# mygstreamer

basic-tutorial-1/: CMakeLists.txt
